[project]
name = "pylloworld"
version = "0.1.0"
description = "Hello world with entry point"
requires-python = ">=3.9"
dependencies = []

#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"

[project.scripts]
hello-world = "pylloworld:print_hi"

#[tool.setuptools]
#packages = ["pylloworld"]